src/styles/global.css
@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
@import "tailwindcss";
@plugin "daisyui" {
  themes: cupcake --default, forest --prefersdark;
}

html {
  font-family: "Inter", sans-serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
  scroll-behavior: smooth;
}

.fade-word {
  animation: fadeWords 8s linear infinite;
  opacity: 0;
}
.delay-1 {
  animation-delay: 2s;
}
.delay-2 {
  animation-delay: 4s;
}
.delay-3 {
  animation-delay: 6s;
}

@keyframes fadeWords {
  0%,
  20% {
    opacity: 1;
  }
  25%,
  100% {
    opacity: 0;
  }
}

#backToTop {
  position: fixed;
  bottom: 40px;
  right: 40px; /* nice blue */
  border-radius: 50%;
  box-shadow: 0 6px 12px rgba(33, 37, 34, 0.7);
  width: 40px;
  height: 40px;
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  opacity: 0;
  pointer-events: none;
  transition: opacity 0.3s ease;
  z-index: 9999;
}

#backToTop.show {
  opacity: 1;
  pointer-events: auto;
}

#backToTop:hover {
  box-shadow: 0 6px 12px rgba(33, 37, 34, 0.7);
  transform: scale(1.1);
  transition: transform 0.2s ease, background 0.3s ease, box-shadow 0.3s ease;
}

/* Rocket SVG animation */
#rocket {
  width: 28px;
  height: 28px;
  fill: white;
  animation: rocketLift 2s ease-in-out infinite alternate;
  transform-origin: center bottom;
}

@keyframes rocketLift {
  0% {
    transform: translateY(0);
    filter: drop-shadow(0 0 0 transparent);
  }
  100% {
    transform: translateY(-6px);
    filter: drop-shadow(0 4px 6px rgba(255, 165, 0, 0.7));
  }
}

